--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Document</title>
     <!-- Inclusion du fichier css pour le style du jeu -->
     <link rel="stylesheet" href="style/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
     <!-- Inclusion des 3 scripts nécessaires pour faire fonctionner le jeu -->
     <!-- Attention, l'ordre des fichiers js est important.  -->
@@ -18,13 +21,13 @@
 <body>
     <!-- HEADER -->
     <header>
-        <h1>AzerType</h1>
-        <h2>L'application pour écrire plus vite !</h2>
-        <h3>AzerType est une application en ligne pour apprendre à taper plus vite au clavier :)</h3>
+        <h1 class="montserrat">AzerType</h1>
+        <h2 class="poppins-extrabold">L'application pour <strong class="container1"> écrire plus vite !</strong></h2>
+        <h3 class="poppins-bold">AzerType est une application en ligne pour apprendre à taper plus vite au clavier :)</h3>
     </header>
 
     <!-- MAIN -->
-    <main>
+    <main class="poppins-medium">
         <div class="zoneOptions">
             <p>Choisissez votre option et tapez la proposition qui s'affiche dans le champ en-dessous.</p>
             <div class="optionSource">
@@ -35,7 +38,7 @@
             </div>
         </div>
 
-        <div class="zoneProposition">
+        <div class="zoneProposition poppins-extrabold"">
             Azerty
         </div>
 
@@ -52,7 +55,7 @@
 
     <!-- FOOTER -->
     <footer>
-        @Copyright : Non
+        @Copyright : ThornedN
     </footer>
 </body>
 </html>
