--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         <div class="zoneOptions">
             <p>Choisissez votre option et tapez la proposition qui s'affiche dans le champ en-dessous.</p>
             <div class="optionSource">
-                <input type="radio" name="optionSource" id="mots" value="1" checked>
-                <label for="mots">Mots</label>
+                <input type="radio" name="optionSource" id="mots" value="1" checked >
+                <label for="mots" class="container67">Mots</label>
                 <input type="radio" name="optionSource" id="phrases" value="2">
-                <label for="phrases">Phrases</label>
+                <label for="phrases" class="container67">Phrases</label>
             </div>
         </div>
 
@@ -43,7 +43,7 @@
         </div>
 
         <div class="zoneSaisie">
-            <input type="text" id="inputEcriture" name="inputEcriture">
+            <input type="text" id="inputEcriture" name="inputEcriture title" placeholder="Tapez ici..." autocomplete="off">
             <button id="btnValiderMot">Valider</button>
         </div>
 
@@ -54,8 +54,8 @@
     </main>
 
     <!-- FOOTER -->
-    <footer>
-        @Copyright : ThornedN
+    <footer class="poppins-medium">
+        Créé par : <strong class="container1">ThornedN</strong>
     </footer>
 </body>
 </html>
